# Me2sh

./: CMakeLists.txt  Rebuild
.github/workflows/: build-and-run.yml  cmake-multi-platform.yml  create-dmg.yml
Meshing/: GeoMesh.h  GeoMeshPartition.c  GeoMesh_Linalg.c  Graph.hpp  Matrix.c  Primitives.cpp  Primitives.hpp  TriMesh.cpp  TriMesh.hpp  kdTree.c
Simulation/: Fem.cpp  Fem.hpp  Stokes.cpp  Stokes.hpp
Splines/: Bezier.cpp  Bezier.hpp  Spline.cpp  Spline.hpp
Tests/: BeziermeshTest.cpp  EikonalTest.cpp  PoissonTest.cpp  PrimitiveTest.cpp  SplinemeshTest.cpp  StokesTest.cpp  TrimeshTest.cpp
Trimesh/: GeoMesh.h  GeoMesh2d.c  GeoMesh3d.c  GeoMeshPartition.c  GeoMeshSmooth.c  Matrix.c  TriMesh.cpp  TriMesh.hpp
geom/: geometry.cpp  geometry.hpp
gui/: ConsoleOutput.cpp  ConsoleOutput.hpp  drawgeometry.cpp  drawgeometry.hpp  drawmesh.cpp  drawmesh.hpp  gui_main.cpp  mainwindow.cpp  mainwindow.hpp
gui/etc/: ConsoleOutput.cpp  ConsoleOutput.hpp
gui/geom/: drawgeometry.cpp
gui/mesh/: drawmesh.cpp  drawmesh.hpp
gui/sim/: drawsim.cpp  drawsim.hpp
mesh/: meshing.cpp  meshing.hpp
resources/: appicon.icns  me2sh_hummingbird.icns  me2sh_hummingbird_1.icns
sim/: simulation.hpp
test/: CMakeLists.txt  geomTest.cpp  meshTest.cpp
